--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "taro-poster-render": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
