--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@babel/runtime": "^7.7.7",
     "@tarojs/cli": "^3.4.8",
     "@tarojs/components": "3.4.8",
