--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
   "description": "demo",
   "appid": "wx8cdf925321d45960",
   "setting": {
-    "urlCheck": true,
+    "urlCheck": false,
     "es6": false,
     "postcss": false,
     "minified": false
