feat:自定义导航栏+todo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,12 @@
       ],
       "@/utils/*": [
         "./src/utils/*"
+      ],
+      "@/store/*": [
+        "./src/store/*"
+      ],
+      "@/pages/*": [
+        "./src/pages/*"
       ]
     },
     "typeRoots": [
