--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@amap/amap-jsapi-loader": "^1.0.1",
     "@babel/runtime": "^7.7.7",
+    "@reduxjs/toolkit": "^1.8.2",
     "@tarojs/cli": "^3.4.8",
     "@tarojs/components": "3.4.8",
     "@tarojs/plugin-framework-react": "3.4.8",
@@ -47,9 +47,6 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
     "taro-poster-render": "^2.1.2"
   },
   "devDependencies": {
@@ -66,6 +63,7 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "stylelint": "9.3.0",
     "typescript": "^4.1.0"
   },
