--- a/client/package.json
+++ b/client/package.json
@@ -49,7 +49,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.0",
-    "taro-poster-render": "^3.0.1"
+    "taro-poster-render": "^3.0.1",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
