--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "@tarojs/react": "3.4.8",
     "@tarojs/runtime": "3.4.8",
     "@tarojs/taro": "3.4.8",
+    "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
