--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -31,6 +31,9 @@
       "@/store/*": [
         "./src/store/*"
       ],
+      "@/assets/*": [
+        "./src/assets/*"
+      ],
       "@/hooks/*": [
         "./src/hooks/*"
       ],
