feat:待办列表基本完成

--- a/cloud/functions/subscribe/config.json
+++ b/cloud/functions/subscribe/config.json
@@ -8,7 +8,7 @@
     {
       "name": "myTimer",
       "type": "timer",
-      "config": "*/50 * * * * * *"
+      "config": "* * * * * * *"
     }
   ]
 }
