--- a/project.private.config.json
+++ b/project.private.config.json
@@ -20,6 +20,27 @@
           "query": "",
           "launchMode": "default",
           "scene": null
+        },
+        {
+          "name": "",
+          "pathName": "pages/todo-add/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "",
+          "pathName": "pages/todo/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "",
+          "pathName": "pages/user-center/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
         }
       ]
     }
